SERVER-76232 Throw instead of fatally asserting on data corruption detection in WiredTigerIndex

(cherry picked from commit 997f8409465224d1452c612bf12e94fef0c75835)

GitOrigin-RevId: b1df8e49f4e5f8fe2f0a7753f64cf11ab5ea6958